--- a/app/javascript/flavours/glitch/styles/components/drawer.scss
+++ b/app/javascript/flavours/glitch/styles/components/drawer.scss
@@ -112,11 +112,14 @@
 
   .acct {
     display: block;
-    color: $secondary-text-color;
-    font-weight: 500;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    strong {
+      color: $secondary-text-color;
+      font-weight: 500;
+    }
   }
 }
 
